unifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: ghcr.io/linuxserver/unifi-network-application:latest
        name: unifi
        imagePullPolicy: Always
        ports:
          - containerPort: 3478
            protocol: UDP
            name: stun
          - containerPort: 10001
            protocol: UDP
            name: ubnt-discovery
          - containerPort: 8080
            name: inform
          - containerPort: 8443
            name: controller-gui
          - containerPort: 8843
            name: https-redirect
          - containerPort: 8880
            name: http-redirect
          - containerPort: 6789
            name: speedtest
          - containerPort: 1900
            protocol: UDP
            name: l2-discovery
          - containerPort: 11081
            name: l2-redirect
          - containerPort: 5514
            name: syslog
          - containerPort: 8881
            name: hotspot-redirect1
          - containerPort: 8882
            name: hotspot-redirect2
        volumeMounts:
          - mountPath: /config
            name: data-volume
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: pvc-unifi
