unifi/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi
  name: unifi-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: uckey
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 8443
    name: controller-gui-api
    targetPort: 8443
  - port: 8880
    name: http-redirect
    targetPort: 8880
  - port: 8843
    name: https-redirect
    targetPort: 8843
  - port: 6789
    name: speedtest
    targetPort: 6789
  - port: 8080
    name: inform-port
    targetPort: 8080
  - port: 5514
    name: wireless-client-redirector-port1
    targetPort: 5514
  - port: 11081
    name: unknown2
    targetPort: 11081
  - port: 8881
    name: unknown3
    targetPort: 8881
  - port: 8882
    name: wireless-client-redirector-port2
    targetPort: 8882
  selector:
    app: unifi
#  externalIPs:
#    - "192.168.1.113

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi
  name: unifi-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: uckey
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - port: 3478
    name: stun-port
    targetPort: 3478
    protocol: UDP
  - port: 1900
    name: "l2"
    targetPort: 1900
    protocol: UDP
  - port: 10001
    name: "ubnt-discovery"
    targetPort: 10001
    protocol: UDP
  selector:
    app: unifi
#  externalIPs:
#    - "192.168.1.113
